syntax = "proto3";

option go_package = "./;pb";

import "data_msg.proto";
import "common_msg.proto";

message SSRequestGetData
{
	int64 uid 				= 1;
	PBUser user_data		= 2;
}

message SSResponseGetData
{
	ENMessageError result = 1;
	int64 uid			  = 2;
    PBUser user_data      = 3;
}

message SSRequestUpDate {
}

message SSResponseUpDate {
}